--- a/css/doc.css
+++ b/css/doc.css
@@ -23,18 +23,21 @@ The used tags/classes were collected from a Texinfo-generated HTML using:
          | sort -u
 
 */
+
 body {
+/* COMMENTED-OUT 
   font-family: sans-serif;
   font-size: 16px;
   margin: 1em;
 
-  overflow-x: hidden; /* Coupled with the div.header trick,
+  overflow-x: hidden;
+*/ /* Coupled with the div.header trick,
 			 this will extend the header lines
 			 access the entire page width without causing
 			 a horizontal scroll bar to appear. */
 }
 
-
+/* COMMENTED-OUT
 a {
   text-decoration: none;
   outline-style: none;
@@ -46,7 +49,7 @@ a:visited {
 a:hover {
   text-decoration: underline;
 }
-
+*/
 
 /*****************************************************
    Titles / Headers
@@ -179,20 +182,23 @@ div.header {
    /* This will extend the background color of the header
       bar to the entire width of the page (and beyond),
       requires 'overflow-x: hidden' in the 'body'. */
+/* COMMENTED-OUT
    padding-left: 3000px;
    margin-left: -3000px;
    padding-right: 3000px;
    margin-right: -3000px;
+*/
 }
 
 /* Disable any additional margins */
 div.header p {
     margin: 0;
 }
+/* COMMENTED-OUT
 div.header p a {
     color: blue;
 }
-
+*/
 
 /**************************************
    @table is rendered as <dl> (defnition list),
@@ -231,4 +237,30 @@ p code {
 /* @option{} */
 span.nocodebreak {
   color: #5D4C46;
+}
+
+/***************
+ * EXTRA-SETUP *
+ ***************/
+table tr {
+  border-top: initial;
+  background-color: transparent;
+}
+
+table tr:nth-child(2n) {
+  background-color: transparent;
+}
+
+table tr td {
+  border: initial;
+  padding: 0px 2px;
+}
+
+table tr th {
+  border: initial;
+  padding: 0px 2px;
+}
+
+div.header a {
+    color: blue;
 }
