Fix anchors' offset in PG doc by defining an "anchor" CSS class.
Ref: http://stackoverflow.com/a/13184714

--- a/css/doc.css
+++ b/css/doc.css
@@ -264,3 +264,10 @@ table tr th {
 div.header a {
     color: blue;
 }
+
+div.pgdoc a.anchor {
+    display: block;
+    position: relative;
+    top: -163px;
+    visibility: hidden;
+}
